[package]
name = "lakichain"
version = "0.1.0"
authors = ["Lakinator <SchalkLukas20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "^0.9"
hex = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
ring = "^0.16"
httparse = "^1.3"
