[package]
name = "lakichain"
version = "0.1.1"
authors = ["Lukas Schalk <SchalkLukas20@gmail.com>"]
edition = "2018"
description = "Implementation of a proof-of-work blockchain to understand how they work"
repository = "https://github.com/Lakinator/Lakichain.git"
keywords = ["blockchain", "cryptocurrency"]

[dependencies]
sha2 = "^0.9"
hex = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
ring = "^0.16"
httparse = "^1.3"
